api/k8s/fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  namespace: api-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
      - name: fastapi-app
        image: gcr.io/pyremote-444621/fastapi-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: api-apps
spec:
  type: ClusterIP
  selector:
    app: fastapi-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
